Chapter 1,2 and 3 are ready, yeahh

--- a/document.tex
+++ b/document.tex
@@ -33,7 +33,7 @@ oneside, % oneside / twoside
 \newcommand{\gromacs}{GROMACS}
 \newcommand{\martini}{MARTINI}
 \newcommand{\charmm}{CHARMM36}
-\newcommand{\conan}{ConAn}
+\newcommand{\conan}{CONAN}
 
 \newcommand{\pope}{POPE}
 \newcommand{\popc}{POPC}
